# IVASTBOT

./: .gitignore  CLAUDE.md  README.md  face_controller.py  face_instruction.md  main.py  pyproject.toml  requirements.txt  robot_face.html  robot_facecontroller.py
brain/: main.py
brain/.obsidian/: workspace.json
brain/backend/database/FRL/: model-inf.json  time.json
embedding/ivastbot_ws/: yaw_monitor.py
embedding/ivastbot_ws/src/bringup/config/: controllers.yaml
embedding/ivastbot_ws/src/bringup/launch/: bringup.launch.py
embedding/ivastbot_ws/src/bringup/urdf/: ids830.ros2_control.xacro  ivastbot.urdf.xacro
embedding/ivastbot_ws/src/flydigi/flydigi/: flydigi_node.py
embedding/ivastbot_ws/src/ids830_hw/: check_encoder.py
embedding/ivastbot_ws/src/ids830_hw/include/ids830_hw/: ids830_hw.hpp
embedding/ivastbot_ws/src/ids830_hw/src/: ids830_hw.cpp
embedding/ivastbot_ws/src/scan_filter/: package.xml  setup.py
embedding/ivastbot_ws/src/scan_filter/scan_filter/: scan_filter_node.py
embedding/ivastbot_ws/src/slam/config/: slam.yaml
embedding/ivastbot_ws/src/slam/rviz/: slam.rviz
embedding/mecanum_ws/OrbbecSDK_ROS2/orbbec_camera/launch/: astra_plus_rgb.launch.py
embedding/mecanum_ws/gamepad/: CMakeLists.txt  README.md  package.xml
embedding/mecanum_ws/gamepad/launch/: gamepad_teleop.launch.py
embedding/mecanum_ws/gamepad/src/: gamepad_teleop.cpp
embedding/mecanum_ws/mecanum_mr/: CMakeLists.txt  package.xml
embedding/mecanum_ws/mecanum_mr/launch/: display.launch.py  gazebo.launch.py
embedding/mecanum_ws/mecanum_mr/meshes/: W1.STL  W2.STL  W3.STL  W4.STL  base_link.STL
embedding/mecanum_ws/mecanum_mr/urdf/: mecanum_mr.csv  mecanum_mr.gazebo.xacro  mecanum_mr.urdf  mecanum_mr.xacro  mecanum_mr_sim.xacro  urdf12-6.urdf
embedding/mecanum_ws/navigation/: CMakeLists.txt  package.xml
embedding/mecanum_ws/navigation/config/: nav2_default_view.rviz  nav2_params.yaml
embedding/mecanum_ws/navigation/launch/: localization.launch.py  nav2_bringup.launch.py  navigation.launch.py  rviz_nav.launch.py
embedding/mecanum_ws/navigation/maps/: map_4_11.pgm  map_4_11.yaml
embedding/mecanum_ws/omini_urdf/: CMakeLists.txt  README.md  generate tf_tree  package.xml
embedding/mecanum_ws/omini_urdf/launch/: display_rviz.launch.py  gazebo_simulation.launch.py  robot_model_only.launch.py  rplidar.launch.py
embedding/mecanum_ws/omini_urdf/scripts/: analyze_urdf.sh  check_urdf.sh
embedding/mecanum_ws/omini_urdf/urdf/: omni_robot.xacro  omni_robot_base.xacro  utlis.xacro
embedding/mecanum_ws/omni_controller/: README.md  package.xml  setup.py
embedding/mecanum_ws/omni_controller/launch/: omni_robot.launch.py
embedding/mecanum_ws/omni_controller/omni_controller/: gamepad_omni.py  my_teleop.py  odometry_node.py  stm32_usart.py
embedding/mecanum_ws/radeye_ros/: README.md  setup.py
embedding/mecanum_ws/radeye_ros/launch/: dose_logger.launch.xml  radeye.launch.xml
embedding/mecanum_ws/radeye_ros/radeye_ros/: dose_logger.py
embedding/mecanum_ws/radeye_ros/radiation_logs/: dose_data.csv
embedding/mecanum_ws/radiation_layer/: CMakeLists.txt  package.xml
embedding/mecanum_ws/radiation_layer/config/: radiation_config.yaml  radiation_heatmap.rviz
embedding/mecanum_ws/radiation_layer/launch/: combined_map_saver.launch.py  radiation_grid.launch.py
embedding/mecanum_ws/radiation_layer/scripts/: combined_map_saver.py  fake_dose_publisher.py  radiation_grid_publisher.py
embedding/mecanum_ws/slam/: CMakeLists.txt  README.md  package.xml
embedding/mecanum_ws/slam/config/: slam.rviz  slam_mapping_params.yaml
embedding/mecanum_ws/slam/launch/: rviz_slam.launch.py  slam.launch.py
embedding/mecanum_ws/slam/maps/: README.md  map_22_11.pgm  map_22_11.yaml  map_3_11.pgm  map_3_11.yaml  map_4_11.yaml  map_5_11.pgm  map_5_11.yaml  map_rad_14_11.pgm  map_rad_14_11.yaml
embedding/tbm_ws (copy)/src/bringup/: package.xml  setup.py
embedding/tbm_ws (copy)/src/bringup/config/: controllers.yaml  lidar.rviz
embedding/tbm_ws (copy)/src/bringup/launch/: motor.launch.py  rviz.launch.py
embedding/tbm_ws (copy)/src/bringup/urdf/: hinson_robot.urdf.xacro  kinco_canopen.ros2_control.xacro  robot_description.urdf.xacro
embedding/tbm_ws (copy)/src/hins_le_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py  upgrade_log.txt
embedding/tbm_ws (copy)/src/hins_le_ros2/include/hins/: laser_data_receiver.h
embedding/tbm_ws (copy)/src/hins_le_ros2/launch/: hins_le_launch.py
embedding/tbm_ws (copy)/src/hins_le_ros2/src/: main.cpp
embedding/tbm_ws (copy)/src/hins_le_ros2/src/hins/: laser_data_receiver.cpp  xingsong_driver.cpp
embedding/tbm_ws (copy)/src/kinco_canopen_hw/: CMakeLists.txt  kinco_canopen_hw.xml  package.xml
embedding/tbm_ws (copy)/src/kinco_canopen_hw/include/kinco_canopen_hw/: kinco_hw.hpp
embedding/tbm_ws (copy)/src/kinco_canopen_hw/src/: kinco_hw.cpp
embedding/tbm_ws (copy)/src/slam/config/: slam.yaml
embedding/tbm_ws (copy)/src/slam/rviz/: slam.rviz
